--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
-<head>
-  <title>Poopsy</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Poopsy</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag "http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css"%>
+    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"%>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div data-role="page">
 
-<%= yield %>
+  <%= yield %>
 
-<br/><br/>
-<div class="footer">
-  You are <%= signed_in? ? "definitely" : "totally not " %> signed in.<br/>
-  <br/>
-  Session deets: <%= session.inspect %><br/>
-  User deets: <%= User.find(session[:user_id]).inspect %>
-</div>
-</body>
+    </div>
+  </body>
 </html>
