wip, saving state.

--- a/app/assets/stylesheets/log_entries.css.scss
+++ b/app/assets/stylesheets/log_entries.css.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-td.entry-icon
+img.entry-icon
 {
-	text-align: center;
+  float: left;
 }
+
