--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,8 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require jquery/development/jquery.mobile-1.2.0
- *= #require_tree .
+ *= require_tree .
  */
 $green: #99CC99;
 
