--- a/app/views/log_entries/new.html.erb
+++ b/app/views/log_entries/new.html.erb
@@ -14,6 +14,9 @@
     <th>When</th>
     <td><%= f.text_field :when %></td>
   </tr>
+
+<%= render(:partial => "#{@log_entry.loggable_type}_form", :locals => {:f => f}) %>
+  
   <tr>
     <th>Notes</th>
     <td><%= f.text_area :notes, :size => "40x10" %></td>
@@ -21,6 +24,7 @@
 </table>
 <%= hidden_field_tag :log_id, @log_entry.log.id %>
 <%= hidden_field_tag :creator_id, @log_entry.creator.id %>
+<%= hidden_field_tag :type, params[:type] %>
 
 <%= submit_tag "Create entry" %>
 <% end %>
