Temporarily removed jquery references in application.js, added support for creating all log entry types.

--- a/app/views/log_entries/_medicine_form.html.erb
+++ b/app/views/log_entries/_medicine_form.html.erb
@@ -14,6 +14,6 @@
 <tr>
   <th>Unit of Measure</th>
   <td>
-    <%= radio_button :medicine_log_entry, :uom, "ML" %> ML 
+    <%= radio_button :medicine_log_entry, :amount_uom, "ML" %> ML 
   </td>
 </tr>
