--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,24 +1,22 @@
 <h2>Welcome back, <%= @user.first_name %>!</h2>
 
 <h3>Babies</h3> 
-<%= link_to "New baby", {:controller => :baby, :action => :new}, :class => "action new" %>
+<%= link_to "New baby", {:controller => :babies, :action => :new}, :class => "action new" %>
 
 <table summary="list of available babies">
   <tr class="header">
+    <th>&nbsp;</th>
     <th>Name</th>
     <th>Birthday</th>
     <th>Log</th>
   </tr>
 <% @user.babies.each do |b| %>
   <tr class="<%= cycle("odd", "even")%>">
+    <td><%= link_to "x", :controller => :babies, :action => :destroy, :id => b.id %></td>
     <td><%= link_to b.name, :controller => :babies, :action => :show, :id => b.id %></td>
-    <td><%= b.birthday.to_s(:long) %>
+    <td><%= b.birthday.to_s(:long) %></td>
     <td>
-      <% log_index = 1 %>
-      <% b.logs.each do |l| %>
-        <%= link_to "Log #{log_index}", :controller => :logs, :action => :show, :id => l.id %> 
-        <% log_index += 1 %>
-      <% end %>
+      <%= link_to "Log", :controller => :logs, :action => :show, :id => b.log.id %> 
     </td>
   </tr>
 <% end %>
