--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,26 @@
 <html>
   <head>
     <title>Poopsy</title>
-    <%= stylesheet_link_tag    "application" %> <% #:media => "all" %>
+    <%= stylesheet_link_tag    "application" , :media => "all" %>
     <%= stylesheet_link_tag    "mobile" if mobile_device? %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <% if not flash[:notice].blank? %>
-    <div class="flash-notice"><%= flash[:notice] %></div>
-    <% end %>
-    <div data-role="page">
+    <div id="container">
+      <% if mobile_device? %>
+        <%= link_to "Full site", :mobile => 0 %>
+      <% else %>
+        <%= link_to "Mobile site", :mobile => 1 %>
+      <% end %>
+      <% if not flash[:notice].blank? %>
+      <div class="flash-notice"><%= flash[:notice] %></div>
+      <% end %>
+      <div data-role="page">
 
-  <%= yield %>
+    <%= yield %>
 
+      </div>
     </div>
   </body>
 </html>
