Updates for jqeury-ness

--- a/app/assets/stylesheets/log_entries.css
+++ b/app/assets/stylesheets/log_entries.css
@@ -27,6 +27,12 @@ IMG.entry-icon
 	margin: 0px;
 	padding: 0px;
 }
+IMG.entry-menu-icon
+{
+	float: left;
+	margin: 0px;
+	padding: 0px;
+}
 /*[clearfix]*/LI
 {
 	padding: 4px;
