--- a/app/views/log_entries/_breastfeed_form.mobile.erb
+++ b/app/views/log_entries/_breastfeed_form.mobile.erb
@@ -1,10 +1,12 @@
-<li>
-  <%= radio_button :breast_feed_log_entry, :breast, "Left", :title => "Left" %>
+<li data-role="fieldcontain">
+  <%= field_set_tag "Breast", "data-role" => "controlgroup", "data-type" => "horizontal" do %>
+    <%= radio_button :breast_feed_log_entry, :breast, "Left", "name" => "breast_feed_log_entry_breast"  %>
+    <%= label_tag :breast_feed_log_entry_breast_left, "Left" %>
+    <%= radio_button :breast_feed_log_entry, :breast, "Right", "name" => "breast_feed_log_entry_breast" %>
+    <%= label_tag :breast_feed_log_entry_breast_right, "Right" %>
+  <% end %>
 </li>
 <li>
-  <%= radio_button :breast_feed_log_entry, :breast, "Right", :title => "Right" %>
-</li>
-<li>
-  Duration
-  <%= text_field :breast_feed_log_entry, :duration, :class => "number"%>
+  <%= label_tag :breast_feed_log_entry, "Duration" %>
+  <%= range_field_tag :breast_feed_log_entry, :duration, :min => 1, :max => 120, :step => 1 %>
 </li>
