--- a/app/views/log_entries/new.mobile.erb
+++ b/app/views/log_entries/new.mobile.erb
@@ -1,18 +1,18 @@
 
-<%= form_for(:log_entry, :url => {:action => :create}) do |f| %>
+<%= form_for(@log_entry, :url => {:action => :create}) do |f| %>
 
-<ul class="rounded">
-  <li>When
+<ul data-role="listview" data-inset="true">
+  <li>
+    <%= f.label :when %>
     <%= f.text_field :when %>
   </li>
 
 <%= render(:partial => "#{@log_entry.loggable_type}_form", :locals => {:f => f}) unless @log_entry.loggable_type == "other" %>
-  <li>Notes
+  <li>
+    <%= f.label :notes %>
     <%= f.text_area :notes, :size => "40x10" %>
   </li>
-</ul>
-<ul class="individual">
-  <li><%= button_tag "Create entry", :class => "whiteButton" %></li>
+  <li><%= button_tag "Create entry" %></li>
 </ul>
 <%= hidden_field_tag :log_id, @log_entry.log.id %>
 <%= hidden_field_tag :creator_id, @log_entry.creator.id %>
