--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <head>
    <title><%= h(yield(:title) || Untitled) %> </title>
-   <%= stylesheet_link_tag "jquery.mobile-1.2.0"%>
+   <%= stylesheet_link_tag "jquery.mobile-1.2.0", "poopsy" %>
    <%= javascript_include_tag "jquery-1.8.3", "jquery.mobile-1.2.0", "mobile" %>
    <%= yield(:head) %>
   </head>
