--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -6,10 +6,11 @@
    <%= yield(:head) %>
   </head>
   <body>
-    <div data-role="page" class="current scrollable">
+    <div data-role="page" class="current scrollable" data-theme="a">
       <% if show_title? %>
       <div data-role="header" class="toolbar">
-        <%= link_to "Back", nil, "data-icon" => "arrow-l", :class => "back" unless current_page? root_path %>
+        <%= link_to "Back", nil, "data-icon" => "arrow-l", :class => 
+"back" unless current_page? root_path || home_path %>
         <%= link_to "Logout", {:controller => :sessions, :action => :destroy}, "data-role" => "button", "data-icon" => "back", :class => "button" %>
         <h1><%=h yield(:title) %></h1>
         <%= yield(:toolbar) %>
