--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
- <head>
-   <title><%= h(yield(:title) || Untitled) %> </title>
-   <%= stylesheet_link_tag "jquery.mobile-1.2.0", "poopsy" %>
-   <%= javascript_include_tag "jquery-1.8.3", "jquery.mobile-1.2.0", "mobile" %>
-   <%= yield(:head) %>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <title><%= h(yield(:title) || Untitled) %> </title>
+    <%= stylesheet_link_tag "jquery.mobile-1.2.0", "poopsy" %>
+    <%= javascript_include_tag "jquery-1.8.3", "jquery.mobile-1.2.0", "mobile" %>
+    <%= yield(:head) %>
   </head>
-  <body>
-    <div data-role="page" class="current scrollable" data-theme="a">
+  <body >
+    <div data-role="page" data-theme="a">
       <% if show_title? %>
-      <div data-role="header" class="toolbar">
+      <div data-role="header" >
         <%= link_to "Back", nil, "data-icon" => "arrow-l", :class => 
 "back" unless current_page? root_path || home_path %>
         <%= link_to "Logout", {:controller => :sessions, :action => :destroy}, "data-role" => "button", "data-icon" => "back", :class => "button" %>
@@ -17,16 +18,16 @@
       </div>
       <% end %>
       <% unless flash.empty? %>
-      <div data-role="popup" id="flash-info-popup" class="info">
+      <div data-role="popup" id="flash-info-popup">
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
         <% end %>
       </div>
       <script>
-        $( "#flash-info-popup" ).popup();
+        $( 'flash-info-popup' ).popup();
       </script>
       <% end %>
-      <div data-role="content primary">
+      <div data-role="content" class="content-primary">
       
       <%= yield %>
       
