--- a/app/views/users/index.mobile.erb
+++ b/app/views/users/index.mobile.erb
@@ -1,7 +1,7 @@
 <ul>
   <li class="arrow">
 
-<%= link_to "Login with Google", "/auth/google_oauth2/", :rel => "external" %>
+<%= link_to "Login with Google", "/login/google_oauth2/", :rel => "external" %>
 
   </li>
 </ul>
