--- a/app/views/log_entries/_breastfeed_form.mobile.erb
+++ b/app/views/log_entries/_breastfeed_form.mobile.erb
@@ -1,9 +1,9 @@
 <li data-role="fieldcontain">
   <!-- set the selected option opposite of the most recent breastfeed entry -->
   <%= field_set_tag "Breast", "data-role" => "controlgroup", "data-type" => "horizontal" do %>
-    <%= radio_button_tag "breast_feed_log_entry[breast]", "Left"  %>
+    <%= radio_button_tag "breast_feed_log_entry[breast]", "Left", should_select_breast("Left")  %>
     <%= label_tag "breast_feed_log_entry_breast_Left", "Left" %>
-    <%= radio_button_tag  "breast_feed_log_entry[breast]", "Right" %>
+    <%= radio_button_tag  "breast_feed_log_entry[breast]", "Right", should_select_breast("Right")  %>
     <%= label_tag "breast_feed_log_entry_breast_Right", "Right" %>
   <% end %>
 </li>
