--- a/app/views/log_entries/_breastfeed_form.mobile.erb
+++ b/app/views/log_entries/_breastfeed_form.mobile.erb
@@ -8,7 +8,7 @@
   <% end %>
 </li>
 <li>
-  <%= label_tag :breast_feed_log_entry, "Duration" %>
+  <%= label_tag :breast_feed_log_entry_duration, "Duration" %>
   <%= range_field_tag "breast_feed_log_entry[duration]", 0, :min => 1, :max => 120, :step => 1 %>
 </li>
 
