--- a/app/views/user_permission_requests/new.mobile.erb
+++ b/app/views/user_permission_requests/new.mobile.erb
@@ -6,7 +6,7 @@
       <li class="ui-body ui-body-b">
         <fieldset class="ui-grid-a">
           <div class="ui-block-a"><%= link_to "Cancel", home_path, "data-role" => "button", "data-inset" => "true", "data-theme" => "a", "data-rel" =>"back" %></div>
-          <div class="ui-block-b"><%= link_to_function "Send Request", "$(this).closest('form').submit();", "data-role" => "button", "data-inset" => "true", "data-theme" => "c"%></div>
+          <div class="ui-block-b"><%= link_to_function "Send", "$(this).closest('form').submit();", "data-role" => "button", "data-inset" => "true", "data-theme" => "c"%></div>
         </fieldset>
       </li>
 
