--- a/app/views/log_entries/new.mobile.erb
+++ b/app/views/log_entries/new.mobile.erb
@@ -4,7 +4,7 @@
 <ul data-role="listview" data-inset="true">
   <li>
     <label for="log_entry_when">When</label>
-    <input type="datetime" name="log_entry[when]" id="log_entry_when" value="<%= DateTime.now.strftime("%_m/%e/%Y %l:%M %P") %>" />
+    <input type="datetime" name="log_entry[when]" id="log_entry_when" value="<%= @log_entry.when.to_s(:short) %>" />
   </li>
 
 <%= render(:partial => "#{@log_entry.loggable_type}_form", :locals => {:f => f}) unless @log_entry.loggable_type == "other" %>
