--- a/app/views/log_entries/new.mobile.erb
+++ b/app/views/log_entries/new.mobile.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(@log_entry, :url => {:action => :create}) do |f| %>
+<%= form_for(@log_entry, :url => {:action => @post_action}) do |f| %>
 
 <ul data-role="listview" data-inset="true">
   <li>
@@ -7,13 +7,23 @@
     <input type="datetime" name="log_entry[when]" id="log_entry_when" value="<%= @log_entry.when.to_s(:short) %>" />
   </li>
 
-<%= render(:partial => "#{@log_entry.loggable_type}_form", :locals => {:f => f}) unless @log_entry.loggable_type == "other" %>
+<%= render(:partial => "#{@log_entry.type}_form", :locals => {:f => f}) unless @log_entry.type == "other" %>
   <li>
     <%= f.label :notes %>
     <%= f.text_area :notes, :size => "40x10" %>
   </li>
-  <li><%= f.submit "Create entry", "data-theme" => "c" %></li>
+  <li>
+    <fieldset class="ui-grid-a">
+      <div class="ui-block-a">
+        <%= link_to( "Cancel", {:controller => :logs, :action => :show, :id => @log_entry.log.id}, "data-role" => "button" ) %>
+      </div>
+      <div class="ui-block-b">
+        <%= f.submit( (@log_entry.new_record? ? "Create" : "Save"), "data-theme" => "c" )%>
+      </div>
+    </fieldset>
+  </li>
 </ul>
+<%= f.hidden_field :id %>
 <%= hidden_field_tag :log_id, @log_entry.log.id %>
 <%= hidden_field_tag :creator_id, @log_entry.creator.id %>
 <%= hidden_field_tag :type, params[:type] %>
